<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FleeD</string>
    <string name="swipe_label">Swipe!</string>
    <string name="swipe_left_label">Swipe left!</string>
    <string name="swipe_right_label">Swipe right!</string>
    <string name="swipe_up_label">Swipe up!</string>
    <string name="swipe_down_label">Swipe down!</string>
    <string name="label_right">Right</string>
    <string name="label_left">Left</string>
    <string name="label_middle">Middle</string>
    <string name="label_top">Top</string>
    <string name="label_bottom">Bottom</string>
    <string name="not_applicable">n/a</string>

    <string-array name="catt">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <string name="pref_go">Go!</string>
    <string name="title_activity_fillneed">Fillneed</string>
    <string name="action_settings">Settings</string>
    <string name="filter">&#xF0B0;</string>
    <string name="location">&#xF041;</string>
    <string name="facebook">&#xF09A;</string>
    <string name="twitter">&#xF099;</string>
    <string name="share">&#xF045;</string>
    <string name="submit">&#xF102;</string>
    <string name="time">&#xF017;</string>
    <string name="female">&#xF182;</string>
    <string name="laptop">&#xF109;</string>
    <string name="book">&#xF02D;</string>
    <string name="home">&#xF015;</string>
    <string name="something">&#xF187;</string>
    <string name="gear">&#xF013;</string>
    <string name="search">&#xF002;</string>
        <string name="gpslocation">&#xF124;</string>
           <string name="email">&#xF003;</string>

               <string name="sms">&#xF0E5;</string>
           
    <string name="title_activity_userprofile">Userprofile</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_item_detail">Item_detail</string>

</resources>