<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3c3c3c"
    android:orientation="vertical" >
  <com.example.fillneed.Icon_font
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="20dp"
        android:text="@string/location"
        android:textColor="#7f7f7f"
        android:textSize="40dp" />

    <com.example.fillneed.Icon_font
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/TextView01"
        android:layout_marginTop="18dp"
                android:textColor="#fff"
               android:layout_marginLeft="20dp"
        
        android:text="@string/time"
        android:textSize="40dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TextView01"
        android:layout_alignBottom="@+id/TextView01"
        android:layout_marginLeft="21dp"
        android:layout_toRightOf="@+id/TextView01"
        android:text="Location"
                android:textColor="#fff"
        
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignRight="@+id/textView2"
                android:textColor="#fff"
        
        android:text="Time"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <com.example.fillneed.Icon_font
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="80dp"
        android:layout_toLeftOf="@+id/textView2"
                android:textColor="#fff"
         android:text=" "
        android:textSize="30dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TextView02"
        android:layout_alignBottom="@+id/TextView02"
        android:layout_alignLeft="@+id/textView3"
        android:layout_marginTop="25dp"
                android:textColor="#fff"
        
        android:text="Type"
        android:textAppearance="?android:attr/textAppearanceMedium" />

      <com.example.fillneed.Icon_font
          android:id="@+id/TextView03"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentLeft="true"
          android:layout_alignRight="@+id/textView5"
          android:layout_below="@+id/TextView02"
          android:layout_marginTop="17dp"
          android:gravity="center"
                  android:textColor="#fff"
          
          android:text="@string/female"
          android:textSize="40dp" />

      <TextView
          android:id="@+id/textView5"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentLeft="true"
          android:layout_alignRight="@+id/TextView05"
          android:layout_below="@+id/TextView03"
                    android:gravity="center"
                  android:textColor="#fff"
          
          android:text="Clothes" />

      <TextView
          android:id="@+id/textView6"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignBaseline="@+id/textView5"
          android:layout_alignBottom="@+id/textView5"
          android:layout_toRightOf="@+id/textView5"
                  android:textColor="#fff"
          
          android:text="Electronics" />

      <com.example.fillneed.Icon_font
          android:id="@+id/TextView05"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentLeft="true"
          android:layout_alignRight="@+id/textView4"
          android:layout_below="@+id/textView5"
          android:layout_marginTop="22dp"
                  android:textColor="#fff"
          
          android:gravity="center"
          android:text="@string/book"
          android:textSize="40dp" />

      <com.example.fillneed.Icon_font
          android:id="@+id/TextView06"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignBaseline="@+id/TextView05"
          android:layout_alignBottom="@+id/TextView05"
          android:layout_alignLeft="@+id/textView6"
          android:layout_alignRight="@+id/textView6"
                  android:textColor="#fff"
          
          android:gravity="center"
          android:text="@string/something"
          android:textSize="40dp" />

      <TextView
          android:id="@+id/textView7"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentLeft="true"
          android:layout_alignRight="@+id/TextView05"
          android:layout_below="@+id/TextView05"
                    android:gravity="center"
                  android:textColor="#fff"
          
          android:text="Books" />

      <TextView
          android:id="@+id/textView8"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignLeft="@+id/TextView06"
          android:layout_below="@+id/TextView06"
          android:gravity="center"
                  android:textColor="#fff"
          
          android:text="Furniture" />

      <com.example.fillneed.Icon_font
          android:id="@+id/TextView07"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentLeft="true"
          android:layout_alignRight="@+id/TextView05"
          android:layout_below="@+id/textView7"
          android:layout_marginTop="22dp"
                  android:textColor="#fff"
          
          android:gravity="center"
          android:text="@string/home"
          android:textSize="40dp" />

       

      <TextView
          android:id="@+id/textView9"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentLeft="true"
          android:layout_alignRight="@+id/TextView07"
          android:layout_below="@+id/TextView07"
                    android:gravity="center"
                  android:textColor="#fff"
          
          android:text="Household" />

      <com.example.fillneed.Icon_font
          android:id="@+id/TextView04"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_above="@+id/textView6"
          android:layout_alignLeft="@+id/textView6"
          android:layout_alignRight="@+id/textView6"
                  android:textColor="#fff"
          
          android:layout_alignTop="@+id/TextView03"
          android:gravity="center"
          
          android:text="@string/laptop"
          android:textSize="40dp" />
       
</RelativeLayout>